--- a/JavaScript-statement/Readme
+++ b/JavaScript-statement/Readme
@@ -1,1 +1,6 @@
+This is my first JavaScript lesson
+In this lesson I learnt about the event handler (on click) which runs when the buttuon dedicated to it is clicked.
+I also learnt about the DOM (document.getElelementById('demo') which selects the HTNL element with the id = "demo"
+I learnt about the innerHtml property and how to use it to write calculations in a web page.
+I learnt how to use the console property for calculation.
 
